--- a/front/src/index.html
+++ b/front/src/index.html
@@ -11,10 +11,9 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 
-<body class="skin-blue fixed-layout">
-
-</div>
-  <app-root></app-root>
+<body class="skin-default-dark fixed-layout">
+  <div id="main-wrapper">
+    <app-root></app-root>
 </body>
 
 </html>
